--- a/Copia_de_Hunger_games.ipynb
+++ b/Copia_de_Hunger_games.ipynb
@@ -38,7 +38,7 @@
         "id": "ArGCkFq9KPSX"
       },
       "source": [
-        "Wellcome to the first hunger data games!!! You have been selected as tributes from your sectors. In this edition you will be facing each other in a classification competition. The dataset you will be facing is this one:\n",
+        "Welcome to the first hunger data games!!! You have been selected as tributes from your sectors. In this edition you will be facing each other in a classification competition. The dataset you will be facing is this one:\n",
         "\n"
       ]
     },
@@ -54,7 +54,7 @@
         "dataframe = pd.read_csv(url)\n",
         "dataframe.columns = [\"refractive_index\", \"sodium\", \"magnesium\", \"aluminum\", \"silicon\", \"potassium\", \"calcium\", \"barium\", \"iron\", \"type_of_glass\"]"
       ],
-      "execution_count": 164,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -79,7 +79,7 @@
       "source": [
         "dataframe.head(10)"
       ],
-      "execution_count": 165,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -285,7 +285,7 @@
       "source": [
         "dataframe.shape"
       ],
-      "execution_count": 166,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -337,7 +337,7 @@
         "from sklearn.metrics import roc_curve, roc_auc_score\n",
         "import plotly.express as px"
       ],
-      "execution_count": 167,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -352,7 +352,7 @@
       "source": [
         "dataframe.dtypes"
       ],
-      "execution_count": 168,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -399,7 +399,7 @@
       "source": [
         "dataframe[\"type_of_glass\"].value_counts()"
       ],
-      "execution_count": 169,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -427,7 +427,7 @@
         "id": "UJPEIVa4sGeX"
       },
       "source": [
-        "We use Z-score function to detect outliers and to remove them and get the clean data."
+        "We use Z-score function to detect outliers and remove them in order to get clean data."
       ]
     },
     {
@@ -448,7 +448,7 @@
         "df = dataframe[(z < threshold).all(axis=1)]\n",
         "df.shape"
       ],
-      "execution_count": 170,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -470,6 +470,9 @@
         "id": "YCdFu467rtLv"
       },
       "source": [
+        "We can observe that 20 outliers were detected and removed from the original dataset. \n",
+        "\n",
+        "\n",
         "The number of each type of glass after eliminating outliers:"
       ]
     },
@@ -485,7 +488,7 @@
       "source": [
         "df[\"type_of_glass\"].value_counts()"
       ],
-      "execution_count": 171,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -508,6 +511,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bRG4h7BTTvuj"
+      },
+      "source": [
+        "We can see the number of eliminated outliers by each type of glass in natural numbers: "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -520,7 +532,7 @@
         "out = dataframe[\"type_of_glass\"].value_counts() - df[\"type_of_glass\"].value_counts()\n",
         "out"
       ],
-      "execution_count": 172,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -543,6 +555,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pyVaNSlfUHv_"
+      },
+      "source": [
+        "and in percentages:"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -555,7 +576,7 @@
         "out_perc = round(out/dataframe[\"type_of_glass\"].value_counts()*100, 0)\n",
         "out_perc"
       ],
-      "execution_count": 173,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -583,9 +604,7 @@
         "id": "U8D5RAldtO2H"
       },
       "source": [
-        "20 outliers were removed from the original dataset.\n",
-        "\n",
-        "We are going to prepare the data and normalize it for further working."
+        "Now, we are going to prepare the data and normalize it for further working."
       ]
     },
     {
@@ -596,7 +615,7 @@
       "source": [
         "np.random.seed(123)"
       ],
-      "execution_count": 174,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -610,7 +629,7 @@
         "from sklearn import preprocessing\n",
         "norm_X = preprocessing.normalize(X)"
       ],
-      "execution_count": 175,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -619,7 +638,9 @@
         "id": "iUHWRpGOQobv"
       },
       "source": [
-        "Now, let´s split the data into train and test subsets and explore the results of different ML algorithms and find out the better one for our case."
+        "Let´s split the data into train and test subsets and explore the results of different ML algorithms and find out the better one for our case.\n",
+        "\n",
+        "As our dataset is small, it's quite possible that the random split could completely eliminate a class from one of the splits. In order to avoid it, we are going to use stratify, and it will be preserved for sure."
       ]
     },
     {
@@ -635,7 +656,7 @@
         "X_train = sc.fit_transform(X_train)\n",
         "X_test = sc.transform(X_test)"
       ],
-      "execution_count": 176,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -667,7 +688,7 @@
         "models.append(('SVM', SVC()))\n",
         "models.append(('RF', RandomForestClassifier()))"
       ],
-      "execution_count": 177,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -691,7 +712,7 @@
         "\tprint(\"%s: %f (%f)\" % (name, cv_results.mean(), cv_results.std()))\n",
         "\t"
       ],
-      "execution_count": 178,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -760,7 +781,7 @@
         "id": "4gL-VU5kzEPg"
       },
       "source": [
-        "As we can see, Random Forest Classifier has the best performance so is our choice to fit with the training and test set and start to make predictions."
+        "As we can see, Random Forest Classifier has the best performance so we choose it to fit with the training and test set and start making predictions."
       ]
     },
     {
@@ -780,7 +801,7 @@
         "print(confusion_matrix(y_test,y_pred))\n",
         "print(classification_report(y_test,y_pred))"
       ],
-      "execution_count": 179,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -834,7 +855,7 @@
         "print(\"Balanced accuracy score:\", balanced_accuracy_score(y_test, y_pred))\n",
         "print(\"F1 Score:\", f1_score(y_test, y_pred, average='micro'))"
       ],
-      "execution_count": 180,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -865,7 +886,7 @@
         "base_estimator = RandomForestClassifier(random_state=seed, criterion=\"entropy\")\n",
         "model = BaggingClassifier(base_estimator, n_estimators=500, max_samples=50, max_features=5)"
       ],
-      "execution_count": 181,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -880,7 +901,7 @@
       "source": [
         "model.fit(X_train, y_train)"
       ],
-      "execution_count": 182,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -930,7 +951,7 @@
       "source": [
         "model.score(X_test, y_test)"
       ],
-      "execution_count": 183,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -958,7 +979,7 @@
       "source": [
         "base_estimator.fit(X_train, y_train)"
       ],
-      "execution_count": 184,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -993,7 +1014,7 @@
       "source": [
         "base_estimator.score(X_test, y_test)"
       ],
-      "execution_count": 185,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1015,8 +1036,19 @@
         "id": "h3xMi_wx5MIP"
       },
       "source": [
-        "As we can see, Bagging does not improve the Random Forest Classifier as it is already a very powerful classifier and makes a small tweak to Bagging. It would work better on Decision Tree or another less powerful type of classifier. "
+        "As we can see, Bagging does not improve Random Forest as it is already a very powerful classifier and makes a small tweak to Bagging. It would work better on Decision Tree or another less powerful type of classifier. "
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-srtLUkaX4Lf"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
