--- a/Copia_de_Hunger_games.ipynb
+++ b/Copia_de_Hunger_games.ipynb
@@ -35,6 +35,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "-oSE_q_DcNLm"
+      },
+      "source": [
+        "This notebook is done in collaboration between **Sergio Roldan**, **Anna Skorobogatova** and **Pablo Soriano** who form **DatAttack team**."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "ArGCkFq9KPSX"
       },
       "source": [
