--- a/Copia_de_Hunger_games.ipynb
+++ b/Copia_de_Hunger_games.ipynb
@@ -63,7 +63,7 @@
         "dataframe = pd.read_csv(url)\n",
         "dataframe.columns = [\"refractive_index\", \"sodium\", \"magnesium\", \"aluminum\", \"silicon\", \"potassium\", \"calcium\", \"barium\", \"iron\", \"type_of_glass\"]"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -83,12 +83,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 363
         },
-        "outputId": "4ddff25c-1009-4382-8099-49e348ee68a3"
+        "outputId": "11f39be9-f6ce-4c3d-a932-58adf07f24ec"
       },
       "source": [
         "dataframe.head(10)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -278,7 +278,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 165
+          "execution_count": 2
         }
       ]
     },
@@ -289,12 +289,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8d5efd38-9a39-4e05-874d-1909912f17b4"
+        "outputId": "0136301f-4445-48a5-e205-c48c7df75f2f"
       },
       "source": [
         "dataframe.shape"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -306,7 +306,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 166
+          "execution_count": 3
         }
       ]
     },
@@ -346,7 +346,7 @@
         "from sklearn.metrics import roc_curve, roc_auc_score\n",
         "import plotly.express as px"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -356,12 +356,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "00ea0204-7596-46af-afa3-d73f2f30e7fe"
+        "outputId": "7094e6a8-b14a-4e3d-c24f-baa2fe62d130"
       },
       "source": [
         "dataframe.dtypes"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -383,7 +383,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 168
+          "execution_count": 5
         }
       ]
     },
@@ -403,12 +403,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "43e437f4-c4cd-49fa-b150-0f23ca9eb9a7"
+        "outputId": "35b77143-d9ea-4f12-a4a2-41fee8b5d37d"
       },
       "source": [
         "dataframe[\"type_of_glass\"].value_counts()"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -426,7 +426,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 169
+          "execution_count": 6
         }
       ]
     },
@@ -446,7 +446,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e5dc90e5-d614-400b-f0dc-75c56231d19a"
+        "outputId": "e58dbc59-659c-4d69-b98e-8015fbf9d6a9"
       },
       "source": [
         "from scipy import stats\n",
@@ -457,7 +457,7 @@
         "df = dataframe[(z < threshold).all(axis=1)]\n",
         "df.shape"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -469,7 +469,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 170
+          "execution_count": 7
         }
       ]
     },
@@ -492,12 +492,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "697872a6-2233-47c0-cb70-8539c81aac2c"
+        "outputId": "c1fc6a25-ba7d-4661-fcf1-394764494d53"
       },
       "source": [
         "df[\"type_of_glass\"].value_counts()"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -515,7 +515,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 171
+          "execution_count": 8
         }
       ]
     },
@@ -535,13 +535,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lGzZkjZYL92Z",
-        "outputId": "b63f83fa-f214-40f7-9a73-29a769b12090"
+        "outputId": "06293ef5-7d52-4aa4-9888-4662178c6600"
       },
       "source": [
         "out = dataframe[\"type_of_glass\"].value_counts() - df[\"type_of_glass\"].value_counts()\n",
         "out"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -559,7 +559,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 172
+          "execution_count": 9
         }
       ]
     },
@@ -579,13 +579,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LXkSW49DMQCf",
-        "outputId": "12dbd905-bf0a-4cc1-c443-8f977da69c23"
+        "outputId": "e6cd68f8-2f94-45d9-c0df-0d4de04ee769"
       },
       "source": [
         "out_perc = round(out/dataframe[\"type_of_glass\"].value_counts()*100, 0)\n",
         "out_perc"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -603,7 +603,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 173
+          "execution_count": 10
         }
       ]
     },
@@ -624,7 +624,7 @@
       "source": [
         "np.random.seed(123)"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -638,7 +638,7 @@
         "from sklearn import preprocessing\n",
         "norm_X = preprocessing.normalize(X)"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -665,7 +665,7 @@
         "X_train = sc.fit_transform(X_train)\n",
         "X_test = sc.transform(X_test)"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -697,7 +697,7 @@
         "models.append(('SVM', SVC()))\n",
         "models.append(('RF', RandomForestClassifier()))"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -707,7 +707,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a1671321-2f85-4a70-be9c-28bed18829eb"
+        "outputId": "53d8f159-3bf1-4225-ea2f-3b7695b3b796"
       },
       "source": [
         "results = []\n",
@@ -721,19 +721,11 @@
         "\tprint(\"%s: %f (%f)\" % (name, cv_results.mean(), cv_results.std()))\n",
         "\t"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/model_selection/_split.py:296: FutureWarning:\n",
-            "\n",
-            "Setting a random_state has no effect since shuffle is False. This will raise an error in 0.24. You should leave random_state to its default (None), or set shuffle=True.\n",
-            "\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/model_selection/_split.py:296: FutureWarning:\n",
-            "\n",
-            "Setting a random_state has no effect since shuffle is False. This will raise an error in 0.24. You should leave random_state to its default (None), or set shuffle=True.\n",
-            "\n",
             "/usr/local/lib/python3.6/dist-packages/sklearn/model_selection/_split.py:296: FutureWarning:\n",
             "\n",
             "Setting a random_state has no effect since shuffle is False. This will raise an error in 0.24. You should leave random_state to its default (None), or set shuffle=True.\n",
@@ -760,6 +752,14 @@
         {
           "output_type": "stream",
           "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/model_selection/_split.py:296: FutureWarning:\n",
+            "\n",
+            "Setting a random_state has no effect since shuffle is False. This will raise an error in 0.24. You should leave random_state to its default (None), or set shuffle=True.\n",
+            "\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/model_selection/_split.py:296: FutureWarning:\n",
+            "\n",
+            "Setting a random_state has no effect since shuffle is False. This will raise an error in 0.24. You should leave random_state to its default (None), or set shuffle=True.\n",
+            "\n",
             "/usr/local/lib/python3.6/dist-packages/sklearn/model_selection/_split.py:296: FutureWarning:\n",
             "\n",
             "Setting a random_state has no effect since shuffle is False. This will raise an error in 0.24. You should leave random_state to its default (None), or set shuffle=True.\n",
@@ -800,7 +800,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "25d66d51-5830-4141-859d-81bc035ee553"
+        "outputId": "90887a32-7f56-4091-dec2-57dab285162c"
       },
       "source": [
         "cls = RandomForestClassifier(random_state=seed, n_estimators=500, criterion=\"entropy\")\n",
@@ -810,7 +810,7 @@
         "print(confusion_matrix(y_test,y_pred))\n",
         "print(classification_report(y_test,y_pred))"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -856,7 +856,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b426d955-0a91-4113-ab0d-7429516772ee"
+        "outputId": "87f869b8-396d-4ed8-d521-034e7850d96d"
       },
       "source": [
         "from sklearn.metrics import balanced_accuracy_score\n",
@@ -864,7 +864,7 @@
         "print(\"Balanced accuracy score:\", balanced_accuracy_score(y_test, y_pred))\n",
         "print(\"F1 Score:\", f1_score(y_test, y_pred, average='micro'))"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -895,7 +895,7 @@
         "base_estimator = RandomForestClassifier(random_state=seed, criterion=\"entropy\")\n",
         "model = BaggingClassifier(base_estimator, n_estimators=500, max_samples=50, max_features=5)"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -905,12 +905,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "93b621a7-f835-473f-b7c7-f98adae49356"
+        "outputId": "4704c62d-529a-4efb-9cee-fe66a10952d4"
       },
       "source": [
         "model.fit(X_train, y_train)"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -944,7 +944,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 182
+          "execution_count": 19
         }
       ]
     },
@@ -955,12 +955,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f9ea219e-567a-41c7-e39c-190a0ed185cf"
+        "outputId": "f5722a15-8256-4560-ec03-760325455d13"
       },
       "source": [
         "model.score(X_test, y_test)"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -972,7 +972,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 183
+          "execution_count": 20
         }
       ]
     },
@@ -983,12 +983,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c4b80689-3e14-47cd-c3a4-d1b114562929"
+        "outputId": "d09d54d3-d663-422e-8656-e1c62591f39f"
       },
       "source": [
         "base_estimator.fit(X_train, y_train)"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1007,7 +1007,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 184
+          "execution_count": 21
         }
       ]
     },
@@ -1018,12 +1018,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "77b8769c-c2d3-4b86-cdc8-d9e5854fdbb1"
+        "outputId": "965b58ab-ca96-4407-dacd-21e9d584b894"
       },
       "source": [
         "base_estimator.score(X_test, y_test)"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1035,7 +1035,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 185
+          "execution_count": 22
         }
       ]
     },
@@ -1051,13 +1051,151 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-srtLUkaX4Lf"
+        "id": "-srtLUkaX4Lf",
+        "outputId": "b5d90465-68a6-4552-e08c-1ef2dfcce8d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "from joblib import dump, load\n",
+        "dump(cls, 'DatAttack.joblib')"
       ],
-      "execution_count": null,
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['DatAttack.joblib']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eJziD3lhvLIu"
+      },
+      "source": [
+        "model_loaded= load('DatAttack.joblib')"
+      ],
+      "execution_count": 27,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uC2nv-CBvdQT",
+        "outputId": "a12479e5-8b57-4b8a-8158-76833acc4f47",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model_loaded"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RandomForestClassifier(bootstrap=True, ccp_alpha=0.0, class_weight=None,\n",
+              "                       criterion='entropy', max_depth=None, max_features='auto',\n",
+              "                       max_leaf_nodes=None, max_samples=None,\n",
+              "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
+              "                       min_samples_leaf=1, min_samples_split=2,\n",
+              "                       min_weight_fraction_leaf=0.0, n_estimators=500,\n",
+              "                       n_jobs=None, oob_score=False, random_state=7, verbose=0,\n",
+              "                       warm_start=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KYE8g28NwZ3g",
+        "outputId": "0bf645c5-43ce-4917-bce6-e720fd2d5dd6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model_loaded.predict(X_test)\n"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 7, 6, 2, 1, 1, 2, 2, 3, 2, 1, 2, 1, 1, 1, 1, 7, 7, 7, 1, 1, 1,\n",
+              "       1, 5, 1, 2, 3, 2, 2, 7, 2, 2, 1, 1, 1, 2, 2, 5, 3])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "04Aciu-px2s_",
+        "outputId": "a40d2d3a-7fff-4dd0-a826-9f8aa915229b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "y_pred = model_loaded.predict(X_test)\n",
+        "print(accuracy_score(y_test,y_pred))\n",
+        "print(confusion_matrix(y_test,y_pred))\n",
+        "print(classification_report(y_test,y_pred))"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.8461538461538461\n",
+            "[[12  0  2  0  0  0]\n",
+            " [ 2 12  0  0  0  0]\n",
+            " [ 2  0  1  0  0  0]\n",
+            " [ 0  0  0  2  0  0]\n",
+            " [ 0  0  0  0  1  0]\n",
+            " [ 0  0  0  0  0  5]]\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           1       0.75      0.86      0.80        14\n",
+            "           2       1.00      0.86      0.92        14\n",
+            "           3       0.33      0.33      0.33         3\n",
+            "           5       1.00      1.00      1.00         2\n",
+            "           6       1.00      1.00      1.00         1\n",
+            "           7       1.00      1.00      1.00         5\n",
+            "\n",
+            "    accuracy                           0.85        39\n",
+            "   macro avg       0.85      0.84      0.84        39\n",
+            "weighted avg       0.86      0.85      0.85        39\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
